* Changelog
** v0.7 [2/2]
*** DONE Show version in footer
*** DONE lein-release plugin
** v0.8 [3/3]
*** DONE About page
    CLOSED: [2013-05-16 Thu 21:09]
**** List software components used (cfg.current?)
*** DONE cljs spike (set active page in navbar)
    CLOSED: [2013-05-11 Sat 09:30]
*** DONE Upgrade to latest version on central dependencies (cljs, dommy, datomic)
    CLOSED: [2013-05-11 Sat 09:31]
** v0.8.5 [1/1]
*** DONE ELO Rating system
    CLOSED: [2013-05-20 Mon 22:31]
** v0.9.0 [5/5]
*** DONE Tweak ratings algorithm
*** DONE Add player log page (played matches and ratings changes)
*** DONE Remove footer (add info to navbar/about-page)
*** DONE Link to player log page in each table where players are mentioned
*** DONE Pretty print tables with colors of the rainbow!!!
** v0.9.1 [1/1]
*** DONE Implement player form (W/L) for latest five matches
** v0.9.2 [1/1]
*** DONE autorefresh pages (javascript?)
    CLOSED: [2013-06-06 Thu 21:13]
** v0.9.4 [1/1]
*** DONE Fix issue #1 - incorrect color for "expected %" on player log
** v0.9.5 [1/1]
*** DONE Handle sorting of matches played on same day by transaction order
    CLOSED: [2013-06-11 Tue 22:08]

** v0.9.6 [1/1]
*** DONE Matchup feature showing potential matches between a group of players with expected outcome.
    CLOSED: [2013-06-24 Man 07:20]

** v0.9.7 [2/2]
*** DONE Update ancient dependencies
    CLOSED: [2013-06-26 Ons 16:45]
*** DONE Show arrow for winner team in matchup table
    CLOSED: [2013-06-26 Ons 16:45]