@@ -4,10 +4,21 @@
             [markdown.core :as md]))
 
 (defn link-to-player-log [{:keys [id name]}]
-  (link-to (str "/player/log?playerid=" id) name))
+  (if (nil? id)
+    [:span.text-error "Deleted"]
+    (link-to (str "/player/log?playerid=" id) name)))
 
 (defn get-player-by-name [players name]
-  (->> players (filter (fn [p] (= name (:name p)))) first))
+  (->> players
+       (filter (fn [p] (= name (:name p))))
+       first))
+
+(defn render-team [players team]
+  (->> team
+       (map #(->> %
+                  (get-player-by-name players)
+                  link-to-player-log))
+       (interpose ", ")))
 
 (def ^:private time-format "yyyy-MM-dd")
 
